# solis-escrow

./: .gitignore  Cargo.toml  LEVEL_5_FEEDBACK_LOOP.md  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml
contracts/escrow_vault/: Cargo.toml
contracts/escrow_vault/src/: lib.rs  test.rs
contracts/escrow_vault/test_snapshots/test/: test_accumulated_pledges.1.json  test_claim_success.1.json  test_error_asset_mismatch.1.json  test_error_claim_before_deadline.1.json  test_error_claim_goal_not_reached.1.json  test_error_pledge_goal_already_met.1.json  test_error_pledge_negative_amount.1.json  test_error_pledge_past_deadline.1.json  test_error_pledge_zero_amount.1.json  test_error_refund_goal_reached.1.json  test_initialize_only_once.1.json  test_initialize_success.1.json  test_refund_disbursal.1.json  test_single_valid_pledge.1.json
docs/: feedback-summary-basic.md  feedback-summary.md  wallet-interactions-proof.md
indexer/: pom.xml
indexer/src/main/java/com/solisescrow/indexer/: SolisEscrowIndexerApplication.java
indexer/src/main/java/com/solisescrow/indexer/domain/: AssetType.java  Escrow.java  EscrowStatus.java  IndexerState.java  Pledge.java
indexer/src/main/java/com/solisescrow/indexer/repository/: EscrowRepository.java  IndexerStateRepository.java  PledgeRepository.java
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BountyCard.tsx  ConnectWalletPrompt.tsx  EscrowCard.tsx  EscrowExplorer.tsx  EscrowSkeleton.tsx  PledgeModal.tsx  PledgeSuccessBanner.tsx  WalletConnect.tsx
src/context/: EscrowContext.tsx  ToastContext.tsx  WalletContext.tsx
src/lib/: escrowTypes.ts  mockEscrows.ts  stellar.ts
src/lib/stubs/: empty.js
